add investigator hardcode

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -20,4 +20,7 @@
 
   <h4>Karma</h4>
   <p>Spectacular Test Runner for JavaScript.</p>
+  
+  <h4>Investigator</h4>
+  <p><a href="#/investigator">Acccess it here</a></p>
 </div>
