--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -77,3 +77,21 @@ body {
     border-bottom: 0;
   }
 }
+
+.container.investigator {
+	width: 400px;  
+	border: 1px dashed red;
+}
+
+.show-grid {
+  margin-bottom: 15px
+}
+
+.show-grid [class^=col-] {
+  padding-top: 10px;
+  padding-bottom: 10px;
+  background-color: #eee;
+  background-color: rgba(86,61,124,.15);
+  border: 1px solid #ddd;
+  border: 1px solid rgba(86,61,124,.2)
+}
