Add investigator hardcoded

--- a/app/views/templates/investigatorDirective.html
+++ b/app/views/templates/investigatorDirective.html
@@ -3,10 +3,10 @@
 <div class="row head">
   <div class="col-xs-6">Foto</div>
   <div class="col-xs-6">
-      <div class="row">Harvey Walter</div>
-      <div class="row">the Professor</div>
-      <div class="row">7 Sanity</div>
-      <div class="row">3 Stamina</div>
+      <h3 class="row">Harvey Walter</h3>
+      <h4 class="row">the Professor</h4>
+      <div class="row"><big>5/7</big> Sanity</div>
+      <div class="row"><big>3/3</big> Stamina</div>
   </div>
 </div>
 <div class="row middle">
@@ -14,7 +14,7 @@
     <div class="row">Home: Administration Building</div>
     <div class="row">Fixed Possesions</div>
     <div class="row">Random Possesions</div>
-    <div class="row">Focus: 2</div>
+    <div class="row"><strong>Focus: 2</strong></div>
   </div>
   <div class="col-xs-6">
     <div class="strong">Strong Mind</div>
