add object usage to investigator template

--- a/app/views/investigator.html
+++ b/app/views/investigator.html
@@ -1,3 +1,23 @@
 <p>This is the investigator view.</p>
 
-<investigator></investigator>
+<investigator inv="{ image: 'JennyBarnesCard.jpg',
+name: 'Jenny Barnes',
+profession: 'Killer',
+curSanity: 5,
+maxSanity: 6,
+curStamina: 3,
+maxStamina: 4,
+home: 'Train Station',
+focus: 2,
+specialAbilityTitle: 'Heritage',
+specialAbilityDescription: 'Gains $1 per upkeep',
+minSpeed: 0,
+minSneak: 0,
+minFight: 0,
+minWill: 2,
+minLore: 1,
+minLuck: 0,
+curSpeed: 3,
+curFight: 2,
+curLore: 2
+}"></investigator>
