--- a/app/views/templates/investigatorDirective.html
+++ b/app/views/templates/investigatorDirective.html
@@ -1,68 +1,66 @@
 <div class="container-fluid investigator">
 <div class="row show-grid">
 <div class="row head">
-  <div class="col-xs-6">Foto</div>
+  <div class="col-xs-6"><img ng-src="/images/arkham/investigators/{{ inv.image }}"/></div>
   <div class="col-xs-6">
-      <h3 class="row">Harvey Walter</h3>
-      <h4 class="row">the Professor</h4>
-      <div class="row"><big>5/7</big> Sanity</div>
-      <div class="row"><big>3/3</big> Stamina</div>
+      <h3 class="row">{{ inv.name}}</h3>
+      <h4 class="row">{{ inv.profession}}</h4>
+      <div class="row"><big>{{inv.curSanity}}/{{ inv.maxSanity }}</big> Sanity<span></span></div>
+      <div class="row"><big>{{inv.curStamina}}/{{ inv.maxStamina }}</big> Stamina</div>
   </div>
 </div>
 <div class="row middle">
   <div class="col-xs-6">
-    <div class="row">Home: Administration Building</div>
-    <div class="row">Fixed Possesions</div>
-    <div class="row">Random Possesions</div>
-    <div class="row"><strong>Focus: 2</strong></div>
+    <div class="row">Home: {{ inv.home}}</div>
+    <div class="row"><strong>Focus: {{ inv.focus}}</strong></div>
   </div>
   <div class="col-xs-6">
-    <div class="strong">Strong Mind</div>
-    <p>Any Phase: Harvey reduces all Sanity losses he suffers by 1, to a minimum of 0</p>
+    <h4>{{ inv.specialAbilityTitle}}</h4>
+    <p>{{ inv.specialAbilityDescription}}</p>
   </div>
 </div>
 <div class="row skills">
   <div class="row">
     <div class="col-xs-4">SPEED</div>
-    <div class="col-xs-2">0</div>
-    <div class="col-xs-2">1</div>
-    <div class="col-xs-2">2</div>
-    <div class="col-xs-2">3</div>
+    <div class="col-xs-2">{{ inv.minSpeed + 0}}</div>
+    <div class="col-xs-2">{{ inv.minSpeed + 1}}</div>
+    <div class="col-xs-2">{{ inv.minSpeed + 2}}</div>
+    <div class="col-xs-2">{{ inv.minSpeed + 3}}</div>
   </div>
   <div class="row">
     <div class="col-xs-4">SNEAK</div>
-    <div class="col-xs-2">5</div>
-    <div class="col-xs-2">4</div>
-    <div class="col-xs-2">3</div>
-    <div class="col-xs-2">2</div>
+    <div class="col-xs-2">{{ inv.minSneek + 3}}</div>
+    <div class="col-xs-2">{{ inv.minSneek + 2}}</div>
+    <div class="col-xs-2">{{ inv.minSneek + 1}}</div>
+    <div class="col-xs-2">{{ inv.minSneek + 0}}</div>
   </div>
   <div class="row">
     <div class="col-xs-4">FIGHT</div>
-    <div class="col-xs-2">0</div>
-    <div class="col-xs-2">1</div>
-    <div class="col-xs-2">2</div>
-    <div class="col-xs-2">3</div>
+    <div class="col-xs-2">{{ inv.minFight + 0}}</div>
+    <div class="col-xs-2">{{ inv.minFight + 1}}</div>
+    <div class="col-xs-2">{{ inv.minFight + 2}}</div>
+    <div class="col-xs-2">{{ inv.minFight + 3}}</div>
   </div>
   <div class="row">
     <div class="col-xs-4">WILL</div>
-    <div class="col-xs-2">5</div>
-    <div class="col-xs-2">4</div>
-    <div class="col-xs-2">3</div>
-    <div class="col-xs-2">2</div>
+    <div class="col-xs-2">{{ inv.minWill + 3}}</div>
+    <div class="col-xs-2">{{ inv.minWill + 2}}</div>
+    <div class="col-xs-2">{{ inv.minWill + 1}}</div>
+    <div class="col-xs-2">{{ inv.minWill + 0}}</div>
   </div>
   <div class="row">
     <div class="col-xs-4">LORE</div>
-    <div class="col-xs-2">0</div>
-    <div class="col-xs-2">1</div>
-    <div class="col-xs-2">2</div>
-    <div class="col-xs-2">3</div>
+    <div class="col-xs-2">{{ inv.minLore + 0}}</div>
+    <div class="col-xs-2">{{ inv.minLore + 1}}</div>
+    <div class="col-xs-2">{{ inv.minLore + 2}}</div>
+    <div class="col-xs-2">{{ inv.minLore + 3}}</div>
   </div>
   <div class="row">
     <div class="col-xs-4">LUCK</div>
-    <div class="col-xs-2">5</div>
-    <div class="col-xs-2">4</div>
-    <div class="col-xs-2">3</div>
-    <div class="col-xs-2">2</div>
+    <div class="col-xs-2">{{ inv.minLuck + 3}}</div>
+    <div class="col-xs-2">{{ inv.minLuck + 2}}</div>
+    <div class="col-xs-2">{{ inv.minLuck + 1}}</div>
+    <div class="col-xs-2">{{ inv.minLuck + 0}}</div>
   </div>
 </div>
 </div>
