--- a/app/views/templates/investigatorDirective.html
+++ b/app/views/templates/investigatorDirective.html
@@ -2,7 +2,7 @@
 	<div class="row">
 		<div class="row head">
 			<div class="col-xs-6">
-				<img ng-src="/images/arkham/investigators/{{ inv.image }}" />
+				<img height="200px" ng-src="/images/arkham/investigators/{{ inv.image }}" />
 			</div>
 			<div class="col-xs-6">
 				<h3 class="row">{{ inv.name}}</h3>
@@ -36,7 +36,7 @@
 			</div>
 		</div>
 		<div class="row skills">
-			<skill-tuple first="Speed" second="Sneek" inv="inv"></skill-tuple>
+			<skill-tuple first="Speed" second="Sneak" inv="inv"></skill-tuple>
 			<skill-tuple first="Fight" second="Will" inv="inv" ></skill-tuple>
 			<skill-tuple first="Lore" second="Luck" inv="inv" ></skill-tuple>
 		</div>
