--- a/app/views/templates/investigatorDirective.html
+++ b/app/views/templates/investigatorDirective.html
@@ -26,8 +26,8 @@
 		<div class="row middle">
 			<div class="col-xs-6">
 				<div class="row">Home: {{ inv.home}}</div>
-				<div class="row">
-					<strong>Focus: {{ inv.focus}}</strong>
+				<div class="row text-center">
+					<big><strong>Focus: {{ inv.focus}}</strong></big>
 				</div>
 			</div>
 			<div class="col-xs-6">
