Add Ashcan Pete and move investigators to its value provider

--- a/app/views/investigator.html
+++ b/app/views/investigator.html
@@ -1,5 +1,5 @@
 <div ng-controller="InvestigatorCtrl">
 
-<investigator ng-repeat="x in [1,0]" inv="investigators[x]"></investigator>
+<investigator ng-repeat="inv in investigators" inv="inv"></investigator>
 
 </div>
