Add all investigators data and photos

--- a/app/views/templates/investigatorDirective.html
+++ b/app/views/templates/investigatorDirective.html
@@ -21,6 +21,10 @@
 					<plus-minus value="inv.money"></plus-minus>
 					{{ inv.money}} $
 				</div>
+				<div class="row">
+          <plus-minus value="inv.clues"></plus-minus>
+          {{ inv.clues}} Clue Tokens
+        </div>
 			</div>
 		</div>
 		<div class="row middle">
