clean homepage, add settings page

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -78,11 +78,9 @@ body {
   }
 }
 
-.container.investigator {
-	width: 400px;  
-	border: 1px dashed red;
-}
-
+/**
+ * show-grid from bootstrap documentation
+ */
 .show-grid {
   margin-bottom: 15px
 }
