--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -93,3 +93,8 @@ body {
   border: 1px solid #ddd;
   border: 1px solid rgba(86,61,124,.2)
 }
+
+.background-grey {
+	.padding: 1px;
+	background-color: #eee;
+}
