--- a/app/views/templates/investigatorDirective.html
+++ b/app/views/templates/investigatorDirective.html
@@ -1,8 +1,15 @@
-<div class="container-fluid investigator">
+<div class="container-fluid investigator" ng-class="{'background-grey': inv.name == current.name}">
 	<div class="row">
 		<div class="row head">
 			<div class="col-xs-6">
-				<img height="200px" ng-src="/images/arkham/investigators/{{ inv.image }}" />
+				<div ng-show="inv.name == first.name" class="col-xs-5 pull-left">
+					<img height="50px" ng-src="/images/arkham/FirstInvestigator.png" />
+				</div>
+				<div class="col-xs-5">
+					<img height="200px"
+						ng-src="/images/arkham/investigators/{{ inv.image }}" />
+				</div>
+
 			</div>
 			<div class="col-xs-6">
 				<h3 class="row">{{ inv.name}}</h3>
@@ -22,9 +29,9 @@
 					{{ inv.money}} $
 				</div>
 				<div class="row">
-          <plus-minus value="inv.clues"></plus-minus>
-          {{ inv.clues}} Clue Tokens
-        </div>
+					<plus-minus value="inv.clues"></plus-minus>
+					{{ inv.clues}} Clue Tokens
+				</div>
 			</div>
 		</div>
 		<div class="row middle">
@@ -41,8 +48,8 @@
 		</div>
 		<div class="row skills">
 			<skill-tuple first="Speed" second="Sneak" inv="inv"></skill-tuple>
-			<skill-tuple first="Fight" second="Will" inv="inv" ></skill-tuple>
-			<skill-tuple first="Lore" second="Luck" inv="inv" ></skill-tuple>
+			<skill-tuple first="Fight" second="Will" inv="inv"></skill-tuple>
+			<skill-tuple first="Lore" second="Luck" inv="inv"></skill-tuple>
 		</div>
 	</div>
 
