small imrpovemnt on layout inv

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -98,3 +98,13 @@ body {
 	.padding: 1px;
 	background-color: #eee;
 }
+
+.fix-me-next-turn {
+	position: fixed;
+	left:10px;
+	top:100px;
+}
+
+.box-mark {
+	border: black 1px dashed;
+}
