--- a/app/views/templates/investigatorDirective.html
+++ b/app/views/templates/investigatorDirective.html
@@ -1,4 +1,4 @@
-<div class="container-fluid investigator" ng-class="{'background-grey': inv.name == current.name}">
+<div class="investigator" ng-class="{'background-grey': inv.name == current.name}">
 	<div class="row">
 		<div class="row head">
 			<div class="col-xs-6">
@@ -6,7 +6,7 @@
 					<img height="50px" ng-src="/images/arkham/FirstInvestigator.png" />
 				</div>
 				<div class="col-xs-5">
-					<img height="200px"
+					<img height="100px"
 						ng-src="/images/arkham/investigators/{{ inv.image }}" />
 				</div>
 
