--- a/app/views/investigator.html
+++ b/app/views/investigator.html
@@ -1,31 +1,37 @@
 
-<div ng-controller="PhaseCtrl" class=" text-center">
-	<h2 class="text-center">
-		Phase: <big><strong>{{ phase.phases[phase.currentPhase] }}</big></strong>
-	</h2>
-	<div>
-		<button ng-click="phase.nextInvestigatorOrPhase()"
-			class="btn btn-success">Next Turn</button>
-		<div class="container">
-			<div class="row">
-				<div class="col-xs-4">Current:</div>
-				<div class="col-xs-4">{{ phase.currentInvestigator.name}}</div>
+<div class="">
+	<div ng-controller="PhaseCtrl" class="box-mark pull-left col-sm-4 fix-me-next-turn" 
+	style="height: 50%">
+	 <button ng-click="phase.nextInvestigatorOrPhase()"
+        class="btn btn-success">Next Turn</button>
+		<h4 class="row">
+			Phase: <strong>{{
+					phase.phases[phase.currentPhase] }}</strong>
+		</h4>
+		<div class="row">
+			<div>
+				<div class="row">
+					<div class="col-sm-4">Current:</div>
+					<div class="col-sm-4">{{ phase.currentInvestigator.name}}</div>
+				</div>
+				<div class="row">
+					<div class="col-sm-4">First:</div>
+					<div class="col-sm-4">{{ phase.firstInvestigator.name}}</div>
+				</div>
 			</div>
-			<div class="row">
-				<div class="col-xs-4">First:</div>
-				<div class="col-xs-4">{{ phase.firstInvestigator.name}}</div>
-			</div>
+
 		</div>
-
 	</div>
-</div>
 
-<div>
-	<h2>
-		Investigators
-		<button class="btn btn-small" ng-click="hideInvestigatorList=!hideInvestigatorList">Show/Hide</button>
-	</h2>
-	<div ng-hide="hideInvestigatorList">
-		<investigator ng-repeat="inv in investigators" inv="inv" first="phase.firstInvestigator" current="phase.currentInvestigator"></investigator>
+
+	<div class="col-sm-8 pull-right">
+		<h2>
+			Investigators
+		</h2>
+		<div>
+			<investigator ng-repeat="inv in investigators" inv="inv"
+				first="phase.firstInvestigator" current="phase.currentInvestigator"></investigator>
+		</div>
 	</div>
-</div>
+
+</div><!-- container -->
