--- a/app/views/investigator.html
+++ b/app/views/investigator.html
@@ -28,8 +28,8 @@
 		<h2>
 			Investigators
 		</h2>
-		<div>
-			<investigator ng-repeat="inv in investigators" inv="inv"
+		<div class="investigator-container ">
+			<investigator class="" ng-repeat="inv in investigators" inv="inv"
 				first="phase.firstInvestigator" current="phase.currentInvestigator"></investigator>
 		</div>
 	</div>
