--- a/app/views/templates/investigatorDirective.html
+++ b/app/views/templates/investigatorDirective.html
@@ -1,56 +1,55 @@
-<div class="investigator" ng-class="{'background-grey': inv.name == current.name}">
-	<div class="row">
-		<div class="row head">
-			<div class="col-xs-6">
-				<div ng-show="inv.name == first.name" class="col-xs-5 pull-left">
-					<img height="50px" ng-src="/images/arkham/FirstInvestigator.png" />
-				</div>
-				<div class="col-xs-5">
-					<img height="100px"
-						ng-src="/images/arkham/investigators/{{ inv.image }}" />
-				</div>
+<div class="investigator box-mark-red"
+	ng-class="{'background-grey': inv.name == current.name}">
 
+	<div class="row head">
+		<div class="col-xs-6">
+			<div ng-show="inv.name == first.name" class="col-xs-5 pull-left">
+				<img height="50px" ng-src="/images/arkham/FirstInvestigator.png" />
 			</div>
-			<div class="col-xs-6">
-				<h3 class="row">{{ inv.name}}</h3>
-				<h4 class="row">{{ inv.profession}}</h4>
-				<div class="row">
-					<plus-minus value="inv.curSanity"></plus-minus>
-					<big>{{inv.curSanity}}/{{ inv.maxSanity }}</big> Sanity
-					<plus-minus value="inv.maxSanity"></plus-minus>
-				</div>
-				<div class="row">
-					<plus-minus value="inv.curStamina"></plus-minus>
-					<big>{{inv.curStamina}}/{{ inv.maxStamina }}</big> Stamina
-					<plus-minus value="inv.maxStamina"></plus-minus>
-				</div>
-				<div class="row">
-					<plus-minus value="inv.money"></plus-minus>
-					{{ inv.money}} $
-				</div>
-				<div class="row">
-					<plus-minus value="inv.clues"></plus-minus>
-					{{ inv.clues}} Clue Tokens
-				</div>
+			<div class="col-xs-5">
+				<img height="100px"
+					ng-src="/images/arkham/investigators/{{ inv.image }}" />
+			</div>
+
+		</div>
+		<div class="col-xs-6">
+			<h3 class="row">{{ inv.name}}</h3>
+			<h4 class="row">{{ inv.profession}}</h4>
+			<div class="row">
+				<plus-minus value="inv.curSanity" size="big" show="1"></plus-minus>
+				Sanity of
+				<plus-minus value="inv.maxSanity" size="normal" show="1"></plus-minus>
+			</div>
+			<div class="row">
+				<plus-minus value="inv.curStamina" size="big" show="1"></plus-minus>
+				Stamina of
+				<plus-minus value="inv.maxStamina" size="normal" show="1"></plus-minus>
+			</div>
+			<div class="row">
+				<plus-minus value="inv.money" size="big" show="1"></plus-minus><big>$$$</big>
+			</div>
+			<div class="row">
+				<plus-minus value="inv.clues" size="big" show="1"></plus-minus>
+				Clue Tokens
 			</div>
 		</div>
-		<div class="row middle">
-			<div class="col-xs-6">
-				<div class="row">Home: {{ inv.home}}</div>
-				<div class="row text-center">
-					<big><strong>Focus: {{ inv.focus}}</strong></big>
-				</div>
-			</div>
-			<div class="col-xs-6">
-				<h4>{{ inv.specialAbilityTitle}}</h4>
-				<p>{{ inv.specialAbilityDescription}}</p>
+	</div>
+	<div class="row middle">
+		<div class="col-xs-6">
+			<div class="row">Home: {{ inv.home}}</div>
+			<div class="row text-center">
+				<big><strong>Focus: {{ inv.focus}}</strong></big>
 			</div>
 		</div>
-		<div class="row skills">
-			<skill-tuple first="Speed" second="Sneak" inv="inv"></skill-tuple>
-			<skill-tuple first="Fight" second="Will" inv="inv"></skill-tuple>
-			<skill-tuple first="Lore" second="Luck" inv="inv"></skill-tuple>
+		<div class="col-xs-6">
+			<h4>{{ inv.specialAbilityTitle}}</h4>
+			<p>{{ inv.specialAbilityDescription}}</p>
 		</div>
+	</div>
+	<div class="row skills">
+		<skill-tuple first="Speed" second="Sneak" inv="inv"></skill-tuple>
+		<skill-tuple first="Fight" second="Will" inv="inv"></skill-tuple>
+		<skill-tuple first="Lore" second="Luck" inv="inv"></skill-tuple>
 	</div>
 
 </div>
