--- a/app/views/templates/plusMinus.html
+++ b/app/views/templates/plusMinus.html
@@ -1,2 +1,3 @@
-<span class="glyphicon glyphicon-plus" ng-click="plus()"> </span> 
+<span class="glyphicon glyphicon-plus" ng-click="plus()"> </span>
+<span ng-show="show">{{ value }}</span> 
 <span class="glyphicon glyphicon-minus" ng-click="minus()"> </span>
