remove header on investigator page

--- a/app/views/investigator.html
+++ b/app/views/investigator.html
@@ -24,14 +24,9 @@
 	</div>
 
 
-	<div class="col-sm-8 pull-right">
-		<h2>
-			Investigators
-		</h2>
-		<div class="investigator-container ">
+	<div class="col-sm-8 pull-right investigator-container">
 			<investigator class="" ng-repeat="inv in investigators" inv="inv"
 				first="phase.firstInvestigator" current="phase.currentInvestigator"></investigator>
-		</div>
 	</div>
 
 </div><!-- container -->
