--- a/app/views/investigator.html
+++ b/app/views/investigator.html
@@ -1,7 +1,7 @@
 
-<div class="">
-	<div ng-controller="PhaseCtrl" class="box-mark pull-left col-sm-4 fix-me-next-turn" 
-	style="height: 50%">
+<div class="investigator-page">
+
+	<div ng-controller="PhaseCtrl" class="col-sm-4 box-mark">
 	 <button ng-click="phase.nextInvestigatorOrPhase()"
         class="btn btn-success">Next Turn</button>
 		<h4 class="row">
@@ -19,13 +19,16 @@
 					<div class="col-sm-4">{{ phase.firstInvestigator.name}}</div>
 				</div>
 			</div>
-
+		</div>
+		
+		<div class="row">
+		
 		</div>
 	</div>
 
 
-	<div class="col-sm-8 pull-right investigator-container">
-			<investigator class="" ng-repeat="inv in investigators" inv="inv"
+	<div class="col-sm-8 investigator-list-container box-mark">
+			<investigator class="investigator-single" ng-repeat="inv in investigators" inv="inv"
 				first="phase.firstInvestigator" current="phase.currentInvestigator"></investigator>
 	</div>
 
