--- a/app/views/templates/investigatorDirective.html
+++ b/app/views/templates/investigatorDirective.html
@@ -7,7 +7,7 @@
 				<img height="50px" ng-src="/images/arkham/FirstInvestigator.png" />
 			</div>
 			<div class="col-xs-5">
-				<img height="100px"
+				<img height="100px" width="100px"
 					ng-src="/images/arkham/investigators/{{ inv.image }}" />
 			</div>
 
@@ -26,7 +26,8 @@
 				<plus-minus value="inv.maxStamina" size="normal" show="1"></plus-minus>
 			</div>
 			<div class="row">
-				<plus-minus value="inv.money" size="big" show="1"></plus-minus><big>$$$</big>
+				<plus-minus value="inv.money" size="big" show="1"></plus-minus>
+				<big>$$$</big>
 			</div>
 			<div class="row">
 				<plus-minus value="inv.clues" size="big" show="1"></plus-minus>
@@ -51,5 +52,12 @@
 		<skill-tuple first="Fight" second="Will" inv="inv"></skill-tuple>
 		<skill-tuple first="Lore" second="Luck" inv="inv"></skill-tuple>
 	</div>
-
+	<div class="row cards">
+		<h4>Common Items</h4>
+		<ol>
+			<li ng-repeat="card in inv.commonCards.list">{{card}}</li>
+		</ol>
+		<button>Add Card</button>
+	</div>
+<hr>
 </div>
