display investigator's common items

--- a/app/views/templates/investigatorDirective.html
+++ b/app/views/templates/investigatorDirective.html
@@ -55,7 +55,7 @@
 	<div class="row cards">
 		<h4>Common Items</h4>
 		<ol>
-			<li ng-repeat="card in inv.commonCards.list">{{card}}</li>
+			<li ng-repeat="card in inv.commonCards.list">{{card.name}}</li>
 		</ol>
 		<button>Add Card</button>
 	</div>
