fix draw of cards on UI

--- a/app/views/templates/investigatorDirective.html
+++ b/app/views/templates/investigatorDirective.html
@@ -60,7 +60,7 @@
 			 <div class="row">{{ card.name }}<button ng-click="inv.commonCards.discard(card.name)">Remove</button></div>
 			</li>
 		</ul>
-		<button ng-click="inv.commonCards.getCardFromGamePile()">Add Card</button>
+		<button ng-click="inv.commonCards.draw()">Add Card</button>
 	</div>
 <hr>
 </div>
