--- a/app/views/templates/investigatorDirective.html
+++ b/app/views/templates/investigatorDirective.html
@@ -53,25 +53,34 @@
 		<skill-tuple first="Lore" second="Luck" inv="inv"></skill-tuple>
 	</div>
 	<div class="row cards">
-		<h4>Common Items
-		<button ng-click="inv.commonCards.draw()">Draw Common Item</button></h4>
-			<div class="col-xs-2" ng-repeat="card in inv.commonCards.list">
-			 <div class="row"><img class="" width="100px" ng-src="images/arkham/common_items/{{card.image}}"></img></div>
-       <div class="row"><a href="" ng-click="inv.commonCards.discard(card.name)">Discard</a></div>
-     </div>
+    <h4>Common Items <button ng-click="inv.commonCards.draw()">Draw Common Item</button></h4>
+    <div class="col-xs-2" ng-repeat="card in inv.commonCards.list" ng-class="{'card-exhausted' : card.exhaust}">
+      <div class="row wrapper-img"><img class="" width="100px" ng-src="images/arkham/common_items/{{card.image}}"></img></div>
+      <div class="row">[<a href="" ng-click="inv.commonCards.discard(card.name)">Discard</a>]</div>
+      <div class="row" ng-hide="!!card.exhaust">[[<a href="" ng-click="inv.commonCards.exhaust(card)">Exhaust</a>]]</div>
+      <div class="row" ng-show="!!card.exhaust">[[<a href="" ng-click="inv.commonCards.restore(card)">Restore</a>]]</div>
+    </div>
 	</div>
+	<div class="row cards">
+    <h4>Unique Items
+    <button  ng-click="inv.uniqueCards.draw()">Draw Unique Items</button></h4>
+      <div class="col-xs-2" ng-repeat="card in inv.uniqueCards.list">
+       <div class="row wrapper-img"><img class="" width="100px" ng-src="images/arkham/unique_items/{{card.image}}.png"></img></div>
+       <div class="row"><a href="" ng-click="inv.uniqueCards.discard(card.name)">Discard</a></div>
+     </div>
+  </div>
 	<div class="row cards">
     <h4>Spells
     <button class="" ng-click="inv.spellCards.draw()">Draw Spell</button></h4>
       <div class="col-xs-2" ng-repeat="card in inv.spellCards.list">
-       <div class="row"><img class="" width="100px" ng-src="images/arkham/spells/{{card.image}}.png"></img></div>
+       <div class="row wrapper-img"><img class="" width="100px" ng-src="images/arkham/spells/{{card.image}}.png"></img></div>
        <div class="row"><a href="" ng-click="inv.spellCards.discard(card.name)">Discard</a></div>
      </div>
   </div>
   <div class="row cards">
     <button ng-click="inv.skillsCards.draw()">Draw Skill</button>
     <ul>
-     <li  ng-repeat="card in inv.skillsCards.list">{{card.name}}.<span> {{card.text}}</span>
+     <li ng-repeat="card in inv.skillsCards.list">{{card.name}}.<span> {{card.text}}</span>
        <a href="" ng-click="inv.skillsCards.discard(card.name)">Discard</a>
      </li>
     </ul>
