--- a/app/views/investigator.html
+++ b/app/views/investigator.html
@@ -1,14 +1,16 @@
 
 <div class="investigator-page">
 
-	<div ng-controller="PhaseCtrl" class="col-sm-4 box-mark">
-	 <button ng-click="phase.nextInvestigatorOrPhase()"
+	<div ng-controller="PhaseCtrl" class="phaseCtrl">
+    <div class="col-sm-2">
+      <button ng-click="phase.nextInvestigatorOrPhase()"
         class="btn btn-success">Next Turn</button>
-		<h4 class="row">
+    </div>
+		<h4 class="col-sm-2">
 			Phase: <strong>{{
 					phase.phases[phase.currentPhase] }}</strong>
 		</h4>
-		<div class="row">
+		<div class="col-sm-4">
 			<div>
 				<div class="row">
 					<div class="col-sm-4">Current:</div>
@@ -21,9 +23,6 @@
 			</div>
 		</div>
 		
-		<div class="row">
-		
-		</div>
 	</div>
 
 
