--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -123,16 +123,17 @@ span.small {
 }
 
 .phaseCtrl {
-  position: absolute;
+  position: fixed;
   width: 100%;
   left: 0;
-  top: 70px;
-  height: 150px;
-  background: white;
+  top: 0;
+  height: 100px;
+  background: #f0f0f0;
   padding-left: 50px;
-  padding-right: 50px;
+  padding-right: 20px;
   padding-bottom: 10px;
   padding-top: 10px;
+  z-index: 1030;
 }
 
 /**
