--- a/app/views/investigator.html
+++ b/app/views/investigator.html
@@ -22,6 +22,9 @@
 				</div>
 			</div>
 		</div>
+    <div class="col-sm-2 pull-right">
+      <a href="#/settings">Settings</a>
+    </div>
 		
 	</div>
 
