if max value change down in a skill, make value follow if necessary

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,23 +1,18 @@
 <div class="row marketing">
-  
-  <div class="jumbotron">
-    <h1>Hello, world!</h1>
-    <ol>
-      <li>Go to settings and chose investigators</li>
-      <li>Then, go to investigators, and you'll have help bookeeping your investigator sheet</li>
-    </ol>
-    <p><a class="btn btn-primary btn-lg" role="button">Learn more</a></p>
-  </div>
 
-  <h4>Settings</h4>
-  <p><a href="#/settings">Settings</a>
-  
-  <h4>Investigator</h4>
-  <p><a href="#/investigator">Acccess it here</a></p>
+	<div class="jumbotron">
+		<h1>Hello, world!</h1>
+		<div>
+			<p>Go to settings and chose investigators</p>
+			<p>Then, go to investigators, and you'll have help bookeeping
+				your investigator sheet</p>
+		</div>
+		<p>
+			<a href="#/settings" class="btn btn-primary btn-lg" role="button">Settings</a>
+		</p>
+		<img width="300px" src="images/arkham/ArkhamHorrorBox.jpg" />
+	</div>
+
 </div>
 
-<div class="jumbotron">
-  <h1> Arhkahm Horror</h1>
-  <img src="images/arkham/ArkhamHorrorBox.jpg"/>
-</div>
 
