--- a/app/views/templates/investigatorDirective.html
+++ b/app/views/templates/investigatorDirective.html
@@ -16,12 +16,12 @@
 			<h3 class="row">{{ inv.name}}</h3>
 			<h4 class="row">{{ inv.profession}}</h4>
 			<div class="row">
-				<plus-minus value="inv.curSanity" size="big" show="1"></plus-minus>
+				<plus-minus value="inv.curSanity" size="big" show="1" max="inv.maxSanity"></plus-minus>
 				Sanity of
-				<plus-minus value="inv.maxSanity" size="normal" show="1"></plus-minus>
+				<plus-minus value="inv.maxSanity" size="normal" show="1""></plus-minus>
 			</div>
 			<div class="row">
-				<plus-minus value="inv.curStamina" size="big" show="1"></plus-minus>
+				<plus-minus value="inv.curStamina" size="big" show="1" max="inv.maxStamina"></plus-minus>
 				Stamina of
 				<plus-minus value="inv.maxStamina" size="normal" show="1"></plus-minus>
 			</div>
