add angular ui bootstrap

--- a/app/views/templates/investigatorDirective.html
+++ b/app/views/templates/investigatorDirective.html
@@ -1,4 +1,4 @@
-<div class="investigator box-mark-red"
+<div class="investigator"
 	ng-class="{'background-grey': inv.name == current.name}">
 
 	<div class="row head">
