--- a/app/views/templates/investigatorDirective.html
+++ b/app/views/templates/investigatorDirective.html
@@ -39,7 +39,8 @@
 		<div class="col-xs-6">
 			<div class="row">Home: {{ inv.home}}</div>
 			<div class="row text-center">
-				<big><strong>Focus: {{ inv.focus}}</strong></big>
+				<big><strong ng-class="{ 'text-danger' : !inv.availableFocus}">Focus: {{ inv.availableFocus}} / {{ inv.focus }}</strong></big>
+				<a ng-click="inv.availableFocus=inv.focus">[[reset]]</a>
 			</div>
 		</div>
 		<div class="col-xs-6">
@@ -48,9 +49,9 @@
 		</div>
 	</div>
 	<div class="row skills">
-		<skill-tuple first="Speed" second="Sneak" inv="inv"></skill-tuple>
-		<skill-tuple first="Fight" second="Will" inv="inv"></skill-tuple>
-		<skill-tuple first="Lore" second="Luck" inv="inv"></skill-tuple>
+		<skill-tuple first="Speed" second="Sneak" inv="inv" available-focus="inv.availableFocus"></skill-tuple>
+		<skill-tuple first="Fight" second="Will" inv="inv" available-focus="inv.availableFocus"></skill-tuple>
+		<skill-tuple first="Lore" second="Luck" inv="inv" available-focus="inv.availableFocus"></skill-tuple>
 	</div>
 	<div class="row cards">
     <h4>Common Items <button ng-click="inv.commonCards.draw()">Draw Common Item</button></h4>
