--- a/app/views/templates/investigatorDirective.html
+++ b/app/views/templates/investigatorDirective.html
@@ -53,31 +53,9 @@
 		<skill-tuple first="Fight" second="Will" inv="inv" available-focus="inv.availableFocus"></skill-tuple>
 		<skill-tuple first="Lore" second="Luck" inv="inv" available-focus="inv.availableFocus"></skill-tuple>
 	</div>
-	<div class="row cards">
-    <h4>Common Items <button ng-click="inv.commonCards.draw()">Draw Common Item</button></h4>
-    <div class="col-xs-2" ng-repeat="card in inv.commonCards.list" ng-class="{'card-exhausted' : card.exhaust}">
-      <div class="row wrapper-img"><img class="" width="100px" ng-src="images/arkham/common_items/{{card.image}}"></img></div>
-      <div class="row">[<a href="" ng-click="inv.commonCards.discard(card.name)">Discard</a>]</div>
-      <div class="row" ng-hide="!!card.exhaust">[[<a href="" ng-click="inv.commonCards.exhaust(card)">Exhaust</a>]]</div>
-      <div class="row" ng-show="!!card.exhaust">[[<a href="" ng-click="inv.commonCards.restore(card)">Restore</a>]]</div>
-    </div>
-	</div>
-	<div class="row cards">
-    <h4>Unique Items
-    <button  ng-click="inv.uniqueCards.draw()">Draw Unique Items</button></h4>
-      <div class="col-xs-2" ng-repeat="card in inv.uniqueCards.list">
-       <div class="row wrapper-img"><img class="" width="100px" ng-src="images/arkham/unique_items/{{card.image}}.png"></img></div>
-       <div class="row"><a href="" ng-click="inv.uniqueCards.discard(card.name)">Discard</a></div>
-     </div>
-  </div>
-	<div class="row cards">
-    <h4>Spells
-    <button class="" ng-click="inv.spellCards.draw()">Draw Spell</button></h4>
-      <div class="col-xs-2" ng-repeat="card in inv.spellCards.list">
-       <div class="row wrapper-img"><img class="" width="100px" ng-src="images/arkham/spells/{{card.image}}.png"></img></div>
-       <div class="row"><a href="" ng-click="inv.spellCards.discard(card.name)">Discard</a></div>
-     </div>
-  </div>
+	<mini-card cards="inv.commonItems"></mini-card>
+	<mini-card cards="inv.uniqueItems"></mini-card>
+	<mini-card cards="inv.spells"></mini-card>
   <div class="row cards">
     <button ng-click="inv.skillsCards.draw()">Draw Skill</button>
     <ul>
