--- a/app/views/templates/miniCardDirective.html
+++ b/app/views/templates/miniCardDirective.html
@@ -1,7 +1,8 @@
 <div class="row cards">
 	<h4>
 		{{ cards.name }}
-		<button ng-click="cards.draw()">Draw {{ cards.name }}</button>
+		<a class="btn btn-primary" ng-click="cards.draw()">Draw {{ cards.name }}</a>
+		
 	</h4>
 	<div class="col-xs-2 col-sm-2" ng-repeat="card in cards.list"
 		ng-class="{'card-exhausted' : card.exhaust}">
@@ -10,13 +11,13 @@
 				ng-src="images/arkham/{{cards.imgSubDir}}/{{card.image}}.png"></img>
 		</div>
 		<div class="row">
-			[<a href="" ng-click="cards.discard(card.name)">Discard</a>]
+			<a class="btn btn-danger btn-xs" ng-click="cards.discard(card.name)">Discard</a>
 		</div>
 		<div class="row" ng-hide="!!card.exhaust">
-			[[<a href="" ng-click="cards.exhaust(card)">Exhaust</a>]]
+			<a class="btn btn-warning btn-sm"  href="" ng-click="cards.exhaust(card)">Exhaust</a>
 		</div>
 		<div class="row" ng-show="!!card.exhaust">
-			[[<a href="" ng-click="cards.restore(card)">Restore</a>]]
+			<a class="btn btn-warning btn-sm" href="" ng-click="cards.restore(card)">Restore</a>
 		</div>
 	</div>
 </div>
