--- a/app/views/templates/miniCardDirective.html
+++ b/app/views/templates/miniCardDirective.html
@@ -7,17 +7,8 @@
 	<div class="col-xs-2 col-sm-2" ng-repeat="card in cards.list"
 		ng-class="{'card-exhausted' : card.exhaust}">
 		<div class="row wrapper-img">
-			<img class="" width="100px"
+			<img ng-click="openModal(card,cards)" class="" width="100px"
 				ng-src="images/arkham/{{cards.imgSubDir}}/{{card.image}}.png"></img>
-		</div>
-		<div class="row">
-			<a class="btn btn-danger btn-xs" ng-click="cards.discard(card.name)">Discard</a>
-		</div>
-		<div class="row" ng-hide="!!card.exhaust">
-			<a class="btn btn-warning btn-sm"  href="" ng-click="cards.exhaust(card)">Exhaust</a>
-		</div>
-		<div class="row" ng-show="!!card.exhaust">
-			<a class="btn btn-warning btn-sm" href="" ng-click="cards.restore(card)">Restore</a>
 		</div>
 	</div>
 </div>
