remove bootstrap animation of modals
better experience on ipads

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -175,3 +175,13 @@ div.modal-card .card-name {
 div.modal-card .card-buttons > div {
 	padding: 10px;
 }
+
+.modal.fade {
+  opacity: 1;
+}
+
+.modal.fade .modal-dialog, .modal.in .modal-dialog {
+  -webkit-transform: translate(0, 0);
+  -ms-transform: translate(0, 0);
+  transform: translate(0, 0);
+}
