--- a/app/views/templates/miniCardDirective.html
+++ b/app/views/templates/miniCardDirective.html
@@ -1,14 +1,46 @@
 <div class="row cards">
 	<h4>
-		{{ cards.name }}
-		<a class="btn btn-primary" ng-click="cards.draw()">Draw {{ cards.name }}</a>
-		
+		{{ cards.name }} <a class="btn btn-primary" ng-click="cards.draw()">Draw
+			{{ cards.name }}</a>
+
 	</h4>
 	<div class="col-xs-2 col-sm-2" ng-repeat="card in cards.list"
 		ng-class="{'card-exhausted' : card.exhaust}">
 		<div class="row wrapper-img">
-			<img ng-click="openModal(card,cards)" class="" width="100px"
+			<img ng-click="card.details=!card.details" class="" width="100px"
 				ng-src="images/arkham/{{cards.imgSubDir}}/{{card.image}}.png"></img>
 		</div>
+
+		<div  class="mini-card-options" ng-hide="!card.details">
+			<div class="col-xs-4" ng-class="{'card-exhausted' : card.exhaust}">
+				<div class="wrapper-img" ng-click="card.details = false">
+					<img class="" width="250px"
+						ng-src="images/arkham/{{cards.imgSubDir}}/{{card.image}}.png"></img>
+				</div>
+			</div>
+			<div class="col-xs-5 pull-right">
+				<span class="card-type">{{ cards.name }}:</span> <span
+					class="card-name">{{card.name}}</span>
+				<div class="card-text">
+					<p>{{ card.text}}</p>
+				</div>
+			</div>
+			<div class="col-xs-2 card-buttons">
+				<div class="">
+					<a class="btn btn-danger btn-xs"
+						ng-click="cards.discard(card.name)">Discard</a>
+				</div>
+				<div class="" ng-hide="!!card.exhaust">
+					<a class="btn btn-warning btn-sm" href=""
+						ng-click="cards.exhaust(card)">Exhaust</a>
+				</div>
+				<div class="" ng-show="!!card.exhaust">
+					<a class="btn btn-warning btn-sm" href=""
+						ng-click="cards.restore(card)">Restore</a>
+				</div>
+			</div>
+		</div>
+
+
 	</div>
 </div>
