--- a/app/views/templates/miniCardDirective.html
+++ b/app/views/templates/miniCardDirective.html
@@ -11,34 +11,37 @@
 				ng-src="images/arkham/{{cards.imgSubDir}}/{{card.image}}.png"></img>
 		</div>
 
-		<div  class="mini-card-options" ng-hide="!card.details">
+		<div class="mini-card-options" ng-show="card.details === true">
 			<div class="col-xs-4" ng-class="{'card-exhausted' : card.exhaust}">
 				<div class="wrapper-img" ng-click="card.details = false">
 					<img class="" width="250px"
 						ng-src="images/arkham/{{cards.imgSubDir}}/{{card.image}}.png"></img>
 				</div>
 			</div>
-			<div class="col-xs-5 pull-right">
-				<span class="card-type">{{ cards.name }}:</span> <span
-					class="card-name">{{card.name}}</span>
-				<div class="card-text">
-					<p>{{ card.text}}</p>
+			<div class="col-xs-6 pull-right">
+				<div class="row">
+					<span class="card-type">{{ cards.name }}:</span> <span
+						class="card-name">{{card.name}}</span>
+					<div class="card-text">
+						<p>{{ card.text}}</p>
+					</div>
+				</div>
+				<div class="row card-buttons">
+					<div class="">
+						<a class="btn btn-danger btn-xs"
+							ng-click="cards.discard(card.name)">Discard</a>
+					</div>
+					<div class="" ng-hide="!!card.exhaust">
+						<a class="btn btn-warning btn-sm" href=""
+							ng-click="cards.exhaust(card)">Exhaust</a>
+					</div>
+					<div class="" ng-show="!!card.exhaust">
+						<a class="btn btn-warning btn-sm" href=""
+							ng-click="cards.restore(card)">Restore</a>
+					</div>
 				</div>
 			</div>
-			<div class="col-xs-2 card-buttons">
-				<div class="">
-					<a class="btn btn-danger btn-xs"
-						ng-click="cards.discard(card.name)">Discard</a>
-				</div>
-				<div class="" ng-hide="!!card.exhaust">
-					<a class="btn btn-warning btn-sm" href=""
-						ng-click="cards.exhaust(card)">Exhaust</a>
-				</div>
-				<div class="" ng-show="!!card.exhaust">
-					<a class="btn btn-warning btn-sm" href=""
-						ng-click="cards.restore(card)">Restore</a>
-				</div>
-			</div>
+
 		</div>
 
 
