add link to encounters from investigators

--- a/app/views/investigator.html
+++ b/app/views/investigator.html
@@ -23,7 +23,8 @@
 			</div>
 		</div>
     <div class="col-sm-2 pull-right">
-      <a href="#/settings">Settings</a>
+      <a class="btn btn-info btn-xs" href="#/settings">Settings</a>
+      <a class="btn btn-info btn-xs" href="#/arkham_encounters">Encounter</a>
     </div>
 		
 	</div>
