--- a/app/views/main.html
+++ b/app/views/main.html
@@ -3,9 +3,12 @@
 	<div class="jumbotron">
 		<h1>Hello, world!</h1>
 		<div>
+			<p> This is a `work in progress` </p>
 			<p>Go to settings and chose investigators</p>
 			<p>Then, go to investigators, and you'll have help bookeeping
 				your investigator sheet</p>
+			<p>Or, you can use <a href="#/arkham_encounters>Arkham Encounters</a> to avoid drawing cards from those decks</p>
+			
 		</div>
 		<p>
 			<a href="#/settings" class="btn btn-primary btn-lg" role="button">Settings</a>
