setup initial items for investigators
includes: common items, unique items, spells, and skills
does not include: allies, retainers, blessings

--- a/app/views/settings.html
+++ b/app/views/settings.html
@@ -22,5 +22,17 @@
       </li>
     </ol>
   </div>
+  
+  <div>
+  	<h4>Setup</h4>
+  	<button ng-click="setupAll()" class="btn-success">Setup All!</button>
+  	<ol class="well">
+      <li ng-click="setupInv(inv)" class="btn btn-sm" ng-repeat="inv in activeList">
+      	<img  height="100px" ng-src="images/arkham/investigators/{{ inv.image }}" />
+      	{{ inv.name}}
+      </li>
+    </ol>
+  	
+  </div>
 </div>
 
