--- a/app/views/templates/miniCardDirective.html
+++ b/app/views/templates/miniCardDirective.html
@@ -39,6 +39,7 @@
 						<a class="btn btn-warning btn-sm" href=""
 							ng-click="cards.restore(card)">Restore</a>
 					</div>
+					<mini-card-transfer card="card" inv="inv" type="cards.name"></mini-card-transfer>
 				</div>
 			</div>
 
