--- a/app/views/investigator.html
+++ b/app/views/investigator.html
@@ -25,6 +25,7 @@
     <div class="col-sm-2 pull-right">
       <a class="btn btn-info btn-xs" href="#/settings">Settings</a>
       <a class="btn btn-info btn-xs" href="#/arkham_encounters">Encounter</a>
+      <a class="btn btn-info btn-xs" href="#/mythos">Mythos</a>
     </div>
 		
 	</div>
