--- a/app/views/mythos.html
+++ b/app/views/mythos.html
@@ -1,9 +1,6 @@
 <p>This is the mythos view.</p>
 
-<div class="terror-level"><h3>Terror Level</h3>
-	<div><span class="title">Current Level</span>: <span class="level">{{ terrorLevel.value }}</span>
-	<div><a href="" class="btn btn-warning" ng-click="increaseTerror()">Increase Terror</a></div>
-</div>
+<terror-level></terror-level>
 
 <h3>Mythos</h3>
 <a class="btn btn-bg btn-success" ng-click="mythos.draw();">Draw a Mythos Card</a>
