Add selection of allies

--- a/app/views/templates/miniCardDirective.html
+++ b/app/views/templates/miniCardDirective.html
@@ -1,6 +1,6 @@
 <div class="row cards">
 	<h4>
-		{{ cards.name }} <a class="btn btn-primary" ng-click="cards.draw()">Draw
+		{{ cards.name }} <a class="btn btn-default" ng-click="cards.draw()">Draw
 			{{ cards.name }}</a>
 
 	</h4>
