--- a/app/views/investigator.html
+++ b/app/views/investigator.html
@@ -1,14 +1,12 @@
-
 <div class="investigator-page">
 
 	<div ng-controller="PhaseCtrl" class="phaseCtrl">
-    <div class="col-sm-2">
-      <button ng-click="phase.nextInvestigatorOrPhase()"
-        class="btn btn-success">Next Turn</button>
-    </div>
+		<div class="col-sm-2">
+			<button ng-click="phase.nextInvestigatorOrPhase()"
+				class="btn btn-success">Next Turn</button>
+		</div>
 		<h4 class="col-sm-2">
-			Phase: <strong>{{
-					phase.phases[phase.currentPhase] }}</strong>
+			Phase: <strong>{{ phase.phases[phase.currentPhase] }}</strong>
 		</h4>
 		<div class="col-sm-4">
 			<div>
@@ -22,18 +20,19 @@
 				</div>
 			</div>
 		</div>
-    <div class="col-sm-2 pull-right">
-      <a class="btn btn-info btn-xs" href="#/settings">Settings</a>
-      <a class="btn btn-info btn-xs" href="#/arkham_encounters">Encounter</a>
-      <a class="btn btn-info btn-xs" href="#/mythos">Mythos</a>
-    </div>
-		
+		<div class="col-sm-2 pull-right">
+			<a class="btn btn-info btn-xs" href="#/settings">Settings</a> <a
+				class="btn btn-info btn-xs" href="#/arkham_encounters">Encounter</a>
+			<a class="btn btn-info btn-xs" href="#/mythos">Mythos</a>
+		</div>
+
 	</div>
 
 
 	<div class="col-sm-8 investigator-list-container box-mark">
-			<investigator class="investigator-single" ng-repeat="inv in investigators" inv="inv"
-				first="phase.firstInvestigator" current="phase.currentInvestigator"></investigator>
+		<investigator class="investigator-single"
+			ng-repeat="inv in investigators" inv="inv"
+			first="phase.firstInvestigator" current="phase.currentInvestigator"></investigator>
 	</div>
 
-</div><!-- container -->
+</div>
