--- a/app/views/templates/investigatorDirective.html
+++ b/app/views/templates/investigatorDirective.html
@@ -16,12 +16,14 @@
 			<h3 class="row">{{ inv.name}}</h3>
 			<h4 class="row">{{ inv.profession}}</h4>
 			<div class="row">
-				<plus-minus value="inv.curSanity" size="big" show="1" max="inv.maxSanity"></plus-minus>
+				<plus-minus value="inv.curSanity" size="big" show="1"
+					max="inv.maxSanity"></plus-minus>
 				Sanity of
 				<plus-minus value="inv.maxSanity" size="normal" show="1""></plus-minus>
 			</div>
 			<div class="row">
-				<plus-minus value="inv.curStamina" size="big" show="1" max="inv.maxStamina"></plus-minus>
+				<plus-minus value="inv.curStamina" size="big" show="1"
+					max="inv.maxStamina"></plus-minus>
 				Stamina of
 				<plus-minus value="inv.maxStamina" size="normal" show="1"></plus-minus>
 			</div>
@@ -39,8 +41,9 @@
 		<div class="col-xs-6">
 			<div class="row">Home: {{ inv.home}}</div>
 			<div class="row text-center">
-				<big><strong ng-class="{ 'text-danger' : !inv.availableFocus}">Focus: {{ inv.availableFocus}} / {{ inv.focus }}</strong></big>
-				<a ng-click="inv.availableFocus=inv.focus">[[reset]]</a>
+				<big><strong ng-class="{ 'text-danger' : !inv.availableFocus}">Focus:
+						{{ inv.availableFocus}} / {{ inv.focus }}</strong></big> <a
+					ng-click="inv.availableFocus=inv.focus">[[reset]]</a>
 			</div>
 		</div>
 		<div class="col-xs-6">
@@ -49,31 +52,39 @@
 		</div>
 	</div>
 	<div class="row skills">
-		<skill-tuple first="Speed" second="Sneak" inv="inv" available-focus="inv.availableFocus"></skill-tuple>
-		<skill-tuple first="Fight" second="Will" inv="inv" available-focus="inv.availableFocus"></skill-tuple>
-		<skill-tuple first="Lore" second="Luck" inv="inv" available-focus="inv.availableFocus"></skill-tuple>
+		<skill-tuple first="Speed" second="Sneak" inv="inv"
+			available-focus="inv.availableFocus"></skill-tuple>
+		<skill-tuple first="Fight" second="Will" inv="inv"
+			available-focus="inv.availableFocus"></skill-tuple>
+		<skill-tuple first="Lore" second="Luck" inv="inv"
+			available-focus="inv.availableFocus"></skill-tuple>
 	</div>
 	<mini-card cards="inv.cards.commonItems" inv="inv" type="common"></mini-card>
 	<mini-card cards="inv.cards.uniqueItems" inv="inv" type="unique"></mini-card>
 	<mini-card cards="inv.cards.spells" inv="inv" type="spell"></mini-card>
-  <div class="row cards allies">
-  	<button ng-click="inv.cards.allies.draw()">Draw Allies</button>
-  	<ul>
-  		<li ng-class="{'card-exhausted': card.exhaust}" ng-repeat="card in inv.cards.allies.list">{{ card.name}}. <span>{{card.text}}</span>
-  		  <span>{{card.info}}</span> {{card}}
-  		  <a href="" ng-click="inv.cards.allies.discard(card.name)">Discard</a>
-  		  <a href="" ng-hide="card.exhaust" ng-click="inv.cards.allies.exhaust(card)">Exhaust</a>
-  		  <a href="" ng-show="card.exhaust" ng-click="inv.cards.allies.restore(card)">Restore</a>
-  		</li>
-  	</ul>
-  </div>
-  <div class="row cards">
-    <button ng-click="inv.cards.skills.draw()">Draw Skill</button>
-    <ul>
-     <li ng-repeat="card in inv.cards.skills.list">{{card.name}}.<span> {{card.text}}</span>
-       <a href="" ng-click="inv.cards.skills.discard(card.name)">Discard</a>
-     </li>
-    </ul>
-  </div>
-<hr>
+	<div class="row cards allies"><h4>Allies</h4>
+		<button class="btn-default btn" ng-click="inv.cards.allies.draw()">Draw Ally</button>
+		<select-ally inv="inv"></select-ally>
+		<ul>
+			<li ng-class="{'card-exhausted': card.exhaust}"
+				ng-repeat="card in inv.cards.allies.list">{{ card.name}}. <span>{{card.text}}</span>
+				<span>{{card.info}}</span> {{card}} <a href=""
+				ng-click="inv.cards.allies.discard(card.name)">Discard</a> <a
+				href="" ng-hide="card.exhaust"
+				ng-click="inv.cards.allies.exhaust(card)">Exhaust</a> <a href=""
+				ng-show="card.exhaust" ng-click="inv.cards.allies.restore(card)">Restore</a>
+			</li>
+		</ul>
+	</div>
+	<div class="row cards">
+		<h4>Skills</h4>
+		<button class="btn btn-default" ng-click="inv.cards.skills.draw()">Draw Skill</button>
+		<ul>
+			<li ng-repeat="card in inv.cards.skills.list">{{card.name}}.<span>
+					{{card.text}}</span> <a href=""
+				ng-click="inv.cards.skills.discard(card.name)">Discard</a>
+			</li>
+		</ul>
+	</div>
+	<hr>
 </div>
