add gates and monsters trophies to investigators

--- a/app/views/templates/investigatorDirective.html
+++ b/app/views/templates/investigatorDirective.html
@@ -86,5 +86,7 @@
 			</li>
 		</ul>
 	</div>
+	<monsters-trophies inv="inv"></monsters-trophies>
+	<gates-trophies inv="inv"></gates-trophies>
 	<hr>
 </div>
