--- a/app/views/templates/gatesTrophiesDirective.html
+++ b/app/views/templates/gatesTrophiesDirective.html
@@ -1,14 +1,17 @@
 <div>
 	<h4>Gates</h4>
-	 <div class="dropdown">
-    <a data-toggle="dropdown" class="btn btn-default" href=""
-      ng-click="select()">Select Gate <span class="caret"></span></a>
-    <ul class="dropdown-menu" role="menu">
-      <li ng-repeat="gate in inv.cards.gates.externalPile.list"><a
-        href="" ng-click="selecting(gate)" class="btn btn-default btn-sm">
-          <div>{{gate}}</div>
-      </a></li>
-    </ul>
-  </div>
-	<div ng-repeat="gates in inv.cards.gates.list">{{ gates }}</div>
+	<div class="dropdown">
+		<a data-toggle="dropdown" class="btn btn-default" href=""
+			ng-click="select()">Select Gate <span class="caret"></span></a>
+		<ul class="dropdown-menu" role="menu">
+			<li ng-repeat="gate in inv.cards.gates.externalPile.list | orderBy: 'name'"><a
+				href="" ng-click="inv.cards.gates.drawByName(gate.name)" class="btn btn-default btn-sm">
+					<div>{{gate.name}}</div>
+			</a></li>
+		</ul>
+	</div>
+	<ol>
+		<li ng-repeat="gate in inv.cards.gates.list | orderBy: 'name'">{{ gate.name }} <a
+			class="btn btn-default btn-sm" href="" ng-click="inv.cards.gates.discard(gate.name)">Discard</a></li>
+		</ul>
 </div>
